# autorepair-voice-agent

./: .env.example  .gitignore  DEPLOY.ps1  docker-compose.yml  railway.json  requirements.txt  server.py
.railway/: config.json
apps/dashboard/: .env.local  Dockerfile  package.json  tailwind.config.ts
apps/dashboard/app/: layout.tsx
apps/dashboard/app/api/calls/: route.ts
apps/dashboard/app/api/calls/[id]/: route.ts
apps/dashboard/app/api/calls/[id]/analysis/: route.ts
apps/dashboard/app/api/daily-token/: route.ts
apps/dashboard/app/api/live/stream/: route.ts
apps/dashboard/app/api/webhooks/pipecat/: route.ts
apps/dashboard/app/calls/: page.tsx
apps/dashboard/app/calls/[id]/: page.tsx
apps/dashboard/app/dashboard/: page.tsx
apps/dashboard/app/live/: page.tsx
apps/dashboard/components/: analysis-card.tsx  browser-call-widget.tsx  calls-table.tsx  live-call-card.tsx  metrics-bar.tsx  transcript-viewer.tsx
apps/dashboard/lib/: analysis.ts  daily.ts  utils.ts
apps/dashboard/prisma/: schema.prisma
apps/voice-server/: Dockerfile  pyproject.toml
apps/voice-server/src/: bot_daily.py  bot_twilio.py  config.py  daily_helpers.py  main.py  prompt.py
apps/voice-server/src/db/: connection.py  session_logger.py
apps/voice-server/src/shopmonkey/: client.py  tools.py
frontend/: dashboard.html  geminilive.js  index.html  mediaUtils.js  script.js  tools.js
